<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_shared_height"
        android:background="#51c0ea" >

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/return_link" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact_us"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/my_two_text_width_map" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/contact_operating"
        android:textSize="20sp" />

    <TextView
        android:singleLine="true"
        android:text="@string/contact_pposition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:textSize="14sp" />
    <TextView
        android:singleLine="true"
        android:text="@string/contact_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:textSize="14sp" />
    <TextView
        android:singleLine="true"
        android:text="@string/contact_way_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:textSize="14sp" />
    <TextView
        android:singleLine="true"
        android:text="@string/contact_way_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:textSize="14sp" />

</LinearLayout>